package com.example.notesapp.core.util

object TestTags {
    // NoteListScreen
    const val ADD_NOTE_FAB = "ADD_NOTE_FAB"
    const val DELETE_NOTE = "DELETE_NOTE"
    const val NOTE_IMAGE_CARD = "NOTE_IMAGE_CARD"

    // AddNoteScreen
    const val NOTE_IMAGE = "NOTE_IMAGE"
    const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
    const val DESCRIPTION_TEXT_FIELD = "DESCRIPTION_TEXT_FIELD"
    const val NOTES_COUNT_TEXT = "NOTES_COUNT_TEXT"
    const val SAVE_BUTTON = "SAVE_BUTTON"

    // ImagesDialog
    const val SEARCH_IMAGE_DIALOG = "SEARCH_IMAGE_DIALOG"
    const val SEARCH_IMAGE_TEXT_FIELD = "SEARCH_IMAGE_TEXT_FIELD"
    const val PICKED_IMAGE = "PICKED_IMAGE"

}